[package]
name = "torznab-toolkit"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A safe, multi-threaded, async toolkit for adding Torznab APIs to programs."
repository = "https://git.askiiart.net/askiiart/torznab-toolkit"
keywords = ["torznab", "torrent", "torrents", "bittorrent"]
categories = ["asynchronous"]

[dependencies]
actix-rt = "2.10.0"
rocket = "0.5.1"
serde = { version = "1.0.215", features = ["derive"] }
xml-rs = "0.8.23"

[profile.release]
opt-level = 3
